[tool.poetry]
name = "JupyterContainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.1"
ipywidgets = "^8.1.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
