[tool.poetry]
name = "JupyterContainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.1"
ipywidgets = "^8.1.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
sympy = "^1.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
